Fix vertical alignment of icons inside toolbar buttons (resetting a `<span>` inside the button wrapping the icons caused the svg align with the baseline).

--- a/src/less/theme/components/toolbar-button/toolbar-button.less
+++ b/src/less/theme/components/toolbar-button/toolbar-button.less
@@ -70,6 +70,7 @@
   width: @toolbar-button-width;
 
   svg {
+    display: block;
     fill: @toolbar-button-icon-color;
   }
 }
